--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ecommerce-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/satheshimman/ecommerce-website/",
+  "homepage": " https://satheshimman.github.io/ecommerce-website/",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
